tests/snapshots/e2e__dump@concurrency-input-expression.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/deploy.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "deploy",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "Deploy",
      "triggers": [
        "pull_request",
        "push",
        "workflow_dispatch"
      ]
    }
  ]
}
