tests/snapshots/e2e__dump@dangling-local-uses.snap
---
source: tests/e2e.rs
assertion_line: 292
expression: projection
---
{
  "actions": [],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/ci.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "build",
          "step_uses_kinds": [
            "external",
            "localaction"
          ]
        }
      ],
      "name": "Dangling Local Uses",
      "triggers": [
        "push"
      ]
    }
  ]
}
