tests/snapshots/e2e__dump@dedup-cluster.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "cache",
      "subpath": null
    },
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    },
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "setup-node",
      "subpath": null
    },
    {
      "gitref": "v7",
      "owner": "peter-evans",
      "repo": "create-pull-request",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/a.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "bump",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Update foo",
      "triggers": [
        "push",
        "workflow_dispatch"
      ]
    },
    {
      "id": ".github/workflows/b.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "bump",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Update bar",
      "triggers": [
        "push",
        "workflow_dispatch"
      ]
    },
    {
      "id": ".github/workflows/c.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "lint",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Lint PRs",
      "triggers": [
        "pull_request"
      ]
    }
  ]
}
