tests/snapshots/e2e__dump@docker-uses-workflow.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/ci.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "smoke",
          "step_uses_kinds": [
            "docker",
            "external"
          ]
        }
      ],
      "name": "CI",
      "triggers": [
        "push"
      ]
    }
  ]
}
