tests/snapshots/e2e__dump@empty-permissions-drop.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/ci.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "lint",
          "step_uses_kinds": [
            "external"
          ]
        },
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "test",
          "step_uses_kinds": [
            "external"
          ]
        },
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "scan",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "CI",
      "triggers": [
        "pull_request",
        "push"
      ]
    }
  ]
}
