tests/snapshots/e2e__dump@environment-deployment.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/publish.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "publish",
          "step_uses_kinds": [
            "external"
          ]
        },
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "smoke",
          "step_uses_kinds": []
        }
      ],
      "name": "Publish",
      "triggers": [
        "push",
        "workflow_dispatch"
      ]
    }
  ]
}
