tests/snapshots/e2e__dump@js-action-node16.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [
    {
      "id": ".",
      "kind": "javascript:node16"
    }
  ],
  "externals": [],
  "schema_version": 10,
  "workflows": []
}
